--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari:wght@400;500;600;700&display=swap"
         rel="stylesheet">
     <!-- Main Stylesheet -->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -378,8 +378,9 @@
         </div>
     </div>
 
-    <script src="./js/questions.js"></script>
-    <script src="./js/app.js"></script>
+    <script src="questions.js"></script>
+    <script src="app.js"></script>
 </body>
+
 
 </html>
